# slamcloude

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_scan_upload_metadata.py  0003_scan_pointcloud_metadata.py  0004_scan_inputs.py  0005_photogrammetry_enabled.py  0006_bag_lidar_enabled.py  0007_project_target_crs.py  0008_project_target_crs_wkt.py
backend/app/: __init__.py  cli.py  config.py  db.py  main.py  models.py  ratelimit.py  schemas.py  security.py
backend/app/api/: deps.py  projects.py  routes.py  scans.py  users.py
backend/app/services/: geo.py  queue.py  s3.py  upload.py
backend/tests/: test_api_auth.py  test_e2e_upload.py  test_geo.py  test_health.py  test_schema.py  test_security.py  test_upload_logic.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
infra/: .env.example  docker-compose.yml
tools/: share_studio_client.py
worker/: Dockerfile  pyproject.toml
worker-fastlio/: Dockerfile  entrypoint.sh  fastlio_bridge.py  mid360_template.yaml
worker-gtsam/: Dockerfile  gtsam_georeference.py
worker-liinit/: Dockerfile  entrypoint.sh  liinit_bridge.py  mid360_liinit.yaml
worker-voxelslam/: Dockerfile  celery_worker.py  entrypoint.sh  mid360_s20.yaml  offline_bag.patch.py  (+1 more)
worker/pipeline/: __init__.py  celery_app.py  db.py  gnss.py  processing.py  s20.py  tasks.py
worker/tests/: test_gnss.py  test_pipeline_chain.py  test_processing.py
(+10 files in other folders)
